home/jellyseerr/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  selector:
    app: jellyseerr
    environment: production
  ports:
    - port: 5055
      targetPort: jellyseerr
      name: jellyseerr
      protocol: TCP
    - port: 7878
      targetPort: radarr
      name: radarr
      protocol: TCP
    - port: 8989
      targetPort: sonarr
      name: sonarr
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
    environment: production
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
      environment: production
  template:
    metadata:
      labels:
        app: jellyseerr
        environment: production
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:2.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
              protocol: TCP
              name: jellyseerr
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr-config
          securityContext:
            runAsUser: 65534
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 256Mi
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.18.4.9674-ls258
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              protocol: TCP
              name: radarr
          volumeMounts:
            - mountPath: /movies
              name: jellyfin-video
            - mountPath: /downloads
              name: qbittorrent-downloads
            - mountPath: /config
              name: radarr-config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 256Mi
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              protocol: TCP
              name: sonarr
          volumeMounts:
            - mountPath: /tv
              name: jellyfin-video
            - mountPath: /downloads
              name: qbittorrent-downloads
            - mountPath: /config
              name: sonarr-config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 256Mi
      volumes:
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr
        - name: jellyfin-video
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/multimedia/video/
        - name: qbittorrent-downloads
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/multimedia/torrent/
